# folder_tidy

./: .gitignore  DownloadsOrganizer.applescript  README.md  gui.html  pyproject.toml
Downloads Organizer.app/Contents/: Info.plist
Downloads Organizer.app/Contents/MacOS/: Downloads Organizer
Downloads Organizer.app/Contents/Resources/: organizer.py
DownloadsOrganizer/: ContentView.swift  DownloadsOrganizerApp.swift  FileOrganizer.swift
DownloadsOrganizer-SwiftUI/DownloadsOrganizer/: ContentView.swift  DownloadsOrganizerApp.swift  FileOrganizer.swift
DownloadsOrganizer-SwiftUI/DownloadsOrganizer.xcodeproj/: project.pbxproj
DownloadsOrganizer.app/Contents/: Info.plist
DownloadsOrganizer.app/Contents/MacOS/: applet
DownloadsOrganizer.app/Contents/Resources/Scripts/: main.scpt
DownloadsOrganizer.app/Contents/_CodeSignature/: CodeResources
DownloadsOrganizer.xcodeproj/: project.pbxproj
DownloadsOrganizer/Assets.xcassets/AccentColor.colorset/: Contents.json
downloads_organize/: __init__.py  cli.py  gui.py
downloads_organize_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
release/: Folder_Tidy_v1.2.0.dmg  Folder_Tidy_v1.3.0.dmg  Folder_Tidy_v1.3.1.dmg
scripts/: build_release_dmg.sh  create_dragdrop_dmg.sh  verify_app_version.sh  verify_dmg_version.sh
tests/: test_cli.py
