[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "downloads-organize-cli"
version = "0.1.0"
description = "Folder Tidy style organizer CLI for source/destination folders"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
downloads-organize = "downloads_organize.cli:main"
downloads-organize-gui = "downloads_organize.gui:main"
